# uplift-modelling

./: .gitignore  README.md  pyproject.toml
data/: data_sample.xlsx
notebooks/: 1_preprocess_data.ipynb  2_boosting.ipynb  2_uplift_modelling.ipynb
